update email & swagger
