# static/swagger/swagger.json
@@ -161,11 +161,11 @@
                 "name": {
                     "type": "string",
                     "enum": [
-                        "salinity",
-                        "temperature",
-                        "carbonate",
-                        "calcium",
-                        "magnesium"
+                        "Salinity",
+                        "Temperature",
+                        "Carbonate Hardness",
+                        "Calcium",
+                        "Magnesium"
                     ]
                 },
                 "value": {
